--- a/twitter-to-kafka-service/src/main/resources/application.yml
+++ b/twitter-to-kafka-service/src/main/resources/application.yml
@@ -1,39 +1,9 @@
-twitter-to-kafka-service:
-  twitter-keywords:
-    - Java
-    - Microservices
-    - Spring
-    - Kafka
-    - ElasticSearch
-  enable-mock-tweets: true
-  mock-min-tweet-length: 5
-  mock-max-tweet-length: 10
-  mock sleep-ms: 2000
+spring:
+  application:
+    name: twitter-to-kafka-service
+    profiles:
+      active: twitter_to_kafka
+  config:
+    import: configserver:http://localhost:8888
 
-retry-config:
-  initial-interval-ms: 1000
-  max-interval-ms: 10000
-  multiplier: 2.0
-  maxAttempts: 3
-  sleep-time-ms: 2000
 
-kafka-config:
-  bootstrap-servers: localhost:19092, localhost:29092, localhost:39092
-  schema-registry-url-key: schema.registry.url
-  schema-registry-url: http://localhost:8081
-  topic-name: twitter-topic
-  topic-names-to-create:
-    - twitter-topic
-  partitions: 3
-  replicationFactor: 3
-
-kafka-producer-config:
-  key-serializer-class: org.apache.kafka.common.serialization.LongSerializer
-  value-serializer-class: io.confluent.kafka.serializers.KafkaAvroSerializer
-  compression-type: snappy
-  acks: all
-  batch-size: 16384 #16Kb
-  linger-ms: 5
-  batch-size-boost-factor: 100
-  request-timeout-ms: 60000
-  retry-count: 5
