--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>kafka</module>
         <module>common-config</module>
         <module>config-server</module>
+        <module>kafka-consumer</module>
     </modules>
     <packaging>pom</packaging>
 
