--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>common-config</module>
         <module>config-server</module>
         <module>kafka-consumer</module>
+        <module>kafka-to-elastic-service</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -32,7 +33,7 @@
 
     <properties>
         <java.version>21</java.version>
-        <spring.boot-version>3.2.2</spring.boot-version>
+        <spring-boot.version>3.2.2</spring-boot.version>
         <lombok.version>1.18.30</lombok.version>
         <avro.version>1.11.3</avro.version>
         <spring-kafka.version>3.1.2</spring-kafka.version>
@@ -78,11 +79,16 @@
                 <artifactId>kafka-producer</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>es.asanchez</groupId>
+                <artifactId>kafka-consumer</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <!-- ####################### -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
-                <version>${spring.boot-version}</version>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -93,7 +99,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <scope>test</scope>
-                <version>${spring.boot-version}</version>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.avro</groupId>
@@ -139,6 +145,11 @@
                 <artifactId>spring-cloud-starter-config</artifactId>
                 <version>${spring-cloud.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -149,7 +160,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring.boot-version}</version>
+                    <version>${spring-boot.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
