--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>config-server</module>
         <module>kafka-consumer</module>
         <module>kafka-to-elastic-service</module>
+        <module>elastic</module>
     </modules>
     <packaging>pom</packaging>
 
