--- a/kafka-to-elastic-service/pom.xml
+++ b/kafka-to-elastic-service/pom.xml
@@ -39,6 +39,18 @@
             <artifactId>kafka-model</artifactId>
         </dependency>
         <dependency>
+            <groupId>es.asanchez</groupId>
+            <artifactId>elastic-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>es.asanchez</groupId>
+            <artifactId>elastic-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>es.asanchez</groupId>
+            <artifactId>elastic-index-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
