--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
                 <artifactId>kafka-consumer</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>es.asanchez</groupId>
+                <artifactId>elastic-model</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <!-- ####################### -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
