--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>kafka-consumer</module>
         <module>kafka-to-elastic-service</module>
         <module>elastic</module>
+        <module>common-util</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -98,6 +99,11 @@
             <dependency>
                 <groupId>es.asanchez</groupId>
                 <artifactId>elastic-index-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>es.asanchez</groupId>
+                <artifactId>common-util</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <!-- ####################### -->
