--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -13,4 +13,5 @@ spring:
     config:
       server:
         git:
+          #uri: file://Users/alejandrosanchez/Documents/Programacion/Java/curso-ms-event-stream/twitter-streams/config-server-directory
           clone-on-start: true
