Elastic query service

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>kafka-to-elastic-service</module>
         <module>elastic</module>
         <module>common-util</module>
+        <module>elastic-query-service</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -104,6 +105,11 @@
             <dependency>
                 <groupId>es.asanchez</groupId>
                 <artifactId>common-util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>es.asanchez</groupId>
+                <artifactId>elastic-query-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <!-- ####################### -->
